--- a/frontend/src/Analyse.css
+++ b/frontend/src/Analyse.css
@@ -1,3 +1,18 @@
+#comdisp-ctn {
+	margin-left: auto;
+	margin-right: auto;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	font-size: 2rem;
+}
+
+#comdisp {
+	background-color: #CCE4EE;
+	width: 100vw;
+	font-size: 1.5rem;
+}
 
 #graph-ctn {
 	display: flex;
