--- a/extension/sentimentnow/src/App.css
+++ b/extension/sentimentnow/src/App.css
@@ -4,7 +4,7 @@
   width: 300px;
   height: 500px;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   font-family: 'Montserrat';
   flex-direction: column;
